--- a/html/home.html
+++ b/html/home.html
@@ -8,23 +8,38 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <!-- MDUI CSS -->
         <link rel="stylesheet" href="https://cdn.w3cbus.com/library/mdui/1.0.2/css/mdui.min.css"/>
+        <link rel="stylesheet" href="../css/style.css"/>
         <title>Hello, world!</title>
         <script src="https://cdn.w3cbus.com/library/mdui/1.0.2/js/mdui.min.js"></script>
     </head>
-    <link rel="import" href="head.html" id="head">
-    <body class="mdui-drawer-body-left mdui-theme-layout-auto mdui-loaded mdui-appbar-inset">
-        <header class="appbar mdui-appbar mdui-appbar-fixed">
-            <div class="mdui-toolbar mdui-color-theme">
+    <body class="mdui-theme-layout-auto mdui-appbar-with-toolbar mdui-theme-accent-blue">
+        <header class="mdui-appbar mdui-appbar-fixed" style="z-index:5000;">
+            <div class="mdui-toolbar">
                 <button class="mdui-btn mdui-btn-icon mdui-ripple" mdui-drawer="{target: '#drawer', swipe: true}">
-                    <i class="mdui-icon material-icons">
-                        menu
-                    </i>
+                    <i class="mdui-icon material-icons">menu</i>
+                </button>
+                <span id="bar-title">Alxndrt</span>
+                <div class="mdui-toolbar-spacer"></div>
+                <button class="mdui-btn mdui-btn-icon mdui-ripple">
+                    <i class="mdui-icon material-icons day">brightness_7</i>
+                    <i class="mdui-icon material-icons night">brightness_4</i>
                 </button>
             </div>
+            <div id="drawer" class="mdui-drawer">
+                <ul class="mdui-list">
+                    <li class="mdui-list-item mdui-ripple mdui-list-item-active">
+                        <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-theme-accent">home</i>
+                        <div class="mdui-list-item-content mdui-text-color-theme-accent">主页</div>
+                    </li>
+                    <div class="mdui-divider"></div>
+                </ul>
+            </div>
         </header>
-        <div id="drawer" class="mdui-drawer">
-            <div class="mdui-list">
-
+        <div class="mdui-container">
+            <div class="mdui-card">
+                <div class="mdui-card-media">
+                    <img src="assesr"
+                </div>
             </div>
         </div>
     </body>
